--- a/Lesson01-Favorite-Toys/T01.01-Exercise-CreateLayout/app/src/main/res/layout/activity_main.xml
+++ b/Lesson01-Favorite-Toys/T01.01-Exercise-CreateLayout/app/src/main/res/layout/activity_main.xml
@@ -16,17 +16,11 @@
 -->
 <!--TODO (6) Remove the line that declares the id, we don't need it-->
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/activity_main"
-    android:layout_width="match_parent"
+    android:id="@+id/activity_main" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!--TODO (3) Remove the default text-->
     <!--TODO (4) Give the TextView 16dp of padding-->
     <!--TODO (5) Set the text size to 20sp-->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
+    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" />
 
 </FrameLayout>
