--- a/Lesson01-Favorite-Toys/T01.01-Exercise-CreateLayout/app/src/main/res/layout/activity_main.xml
+++ b/Lesson01-Favorite-Toys/T01.01-Exercise-CreateLayout/app/src/main/res/layout/activity_main.xml
@@ -19,8 +19,8 @@
     android:id="@+id/activity_main" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!--TODO (4) Give the TextView 16dp of padding-->
     <!--TODO (5) Set the text size to 20sp-->
-    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" />
+    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
+        android:padding="16dp" />
 
 </FrameLayout>
