--- a/Lesson02-GitHub-Repo-Search/T02.01-Exercise-CreateLayout/app/src/main/res/layout/activity_main.xml
+++ b/Lesson02-GitHub-Repo-Search/T02.01-Exercise-CreateLayout/app/src/main/res/layout/activity_main.xml
@@ -24,9 +24,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!--TODO (11) Provide a hint telling the user to enter a query and then click search-->
     <EditText
         android:id="@+id/et_search_box"
+        android:hint="Type a query for GitHub!"
         android:textSize="22sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
