--- a/Lesson02-GitHub-Repo-Search/T02.01-Exercise-CreateLayout/app/src/main/res/layout/activity_main.xml
+++ b/Lesson02-GitHub-Repo-Search/T02.01-Exercise-CreateLayout/app/src/main/res/layout/activity_main.xml
@@ -31,12 +31,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <!--TODO (14) Set the text size to 22sp-->
     <!--TODO (15) Set the width to wrap_content and the height to wrap_content-->
     <!--TODO (16) Give the TextView a top margin of 8dp-->
     <!--TODO (17) Set the text to tell the user their search URL will show up here when they click search-->
     <TextView
         android:id="@+id/tv_url_display"
+        android:textSize="22sp"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
