--- a/Lesson02-GitHub-Repo-Search/T02.01-Exercise-CreateLayout/app/src/main/res/layout/activity_main.xml
+++ b/Lesson02-GitHub-Repo-Search/T02.01-Exercise-CreateLayout/app/src/main/res/layout/activity_main.xml
@@ -31,14 +31,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <!--TODO (15) Set the width to wrap_content and the height to wrap_content-->
     <!--TODO (16) Give the TextView a top margin of 8dp-->
     <!--TODO (17) Set the text to tell the user their search URL will show up here when they click search-->
     <TextView
         android:id="@+id/tv_url_display"
         android:textSize="22sp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
     <!--TODO (18) Add a ScrollView-->
     <!--TODO (19) Set the width to match_parent and the height to wrap_content-->
