--- a/Lesson02-GitHub-Repo-Search/T02.01-Exercise-CreateLayout/app/src/main/res/layout/activity_main.xml
+++ b/Lesson02-GitHub-Repo-Search/T02.01-Exercise-CreateLayout/app/src/main/res/layout/activity_main.xml
@@ -31,11 +31,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <!--TODO (17) Set the text to tell the user their search URL will show up here when they click search-->
     <TextView
         android:id="@+id/tv_url_display"
         android:textSize="22sp"
         android:layout_marginTop="8dp"
+        android:text="Enter a search query and your URL will show up here!"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
