Within the ScrollView, add a TextView

--- a/Lesson02-GitHub-Repo-Search/T02.01-Exercise-CreateLayout/app/src/main/res/layout/activity_main.xml
+++ b/Lesson02-GitHub-Repo-Search/T02.01-Exercise-CreateLayout/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   Copyright (C) 2016 The Android Open Source Project
 
   Licensed under the Apache License, Version 2.0 (the "License");
@@ -15,39 +14,42 @@
   limitations under the License.
 -->
 
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
-    android:paddingTop="16dp"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:paddingTop="16dp">
 
     <EditText
         android:id="@+id/et_search_box"
-        android:hint="Type a query for GitHub!"
-        android:textSize="22sp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:hint="Type a query for GitHub!"
+        android:textSize="22sp" />
 
     <TextView
         android:id="@+id/tv_url_display"
-        android:textSize="22sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="Enter a search query and your URL will show up here!"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:textSize="22sp" />
 
     <ScrollView
-        android:layout_marginTop="16dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></ScrollView>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp">
 
-        <!--TODO (21) Within the ScrollView, add a TextView-->
         <!--TODO (22) Give the TextView an id of @+id/tv_github_search_results_json-->
         <!--TODO (23) Set the text size to 18sp-->
         <!--TODO (24) Set the height and width to wrap_content-->
         <!--TODO (25) Set the text to something that tells the user to make a search-->
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </ScrollView>
 
 </LinearLayout>
