Give the TextView an id of @+id/tv_github_search_results_json

--- a/Lesson02-GitHub-Repo-Search/T02.01-Exercise-CreateLayout/app/src/main/res/layout/activity_main.xml
+++ b/Lesson02-GitHub-Repo-Search/T02.01-Exercise-CreateLayout/app/src/main/res/layout/activity_main.xml
@@ -42,11 +42,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp">
 
-        <!--TODO (22) Give the TextView an id of @+id/tv_github_search_results_json-->
         <!--TODO (23) Set the text size to 18sp-->
         <!--TODO (24) Set the height and width to wrap_content-->
         <!--TODO (25) Set the text to something that tells the user to make a search-->
         <TextView
+            android:id="@+id/tv_github_search_results_json"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
