--- a/Lesson02-GitHub-Repo-Search/T02.06-Exercise-AddPolish/app/src/main/res/layout/activity_main.xml
+++ b/Lesson02-GitHub-Repo-Search/T02.06-Exercise-AddPolish/app/src/main/res/layout/activity_main.xml
@@ -52,14 +52,14 @@
                 android:textSize="18sp" />
         </ScrollView>
 
-        <!--TODO (4) Add a TextView to display an error message-->
-        <!--TODO (5) Set the text size to 22sp-->
-        <!--TODO (6) Give the TextView an id of @+id/tv_error_message_display-->
-        <!--TODO (7) Set the layout_height and layout_width to wrap_content-->
-        <!--TODO (8) Add 16dp of padding to the error display -->
-        <!--TODO (9) Use your strings.xml error message to set the text for the error message-->
-        <!--TODO (10) Set the visibility of the view to invisible-->
-        <!--TODO (11) Make this TextView a child of the FrameLayout that you added above-->
+        <TextView
+            android:id="@+id/tv_error_message_display"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:text="@string/error_message"
+            android:textSize="22sp"
+            android:visibility="invisible" />
 
         <!--TODO (18) Add a ProgressBar to indicate loading to your users-->
         <!--TODO (19) Give the ProgressBar an id of @+id/pb_loading_indicator-->
